--- a/configs/pc/eww/colors.scss
+++ b/configs/pc/eww/colors.scss
@@ -1,5 +1,5 @@
-$bg: #101818;
-$fg: #7888a0;
-$nrm: #485068;
-$act: #485068;
+$bg: #081030;
+$fg: #c0b0b8;
+$nrm: #606888;
+$act: #d04038;
 $urg: #ff0000;
