--- a/configs/pc/waybar/style.css
+++ b/configs/pc/waybar/style.css
@@ -1,7 +1,31 @@
+* {
+    font-size: 13px;
+    font-family: Open Sans, sans-serif;
+    font-weight: 600;
+}
+
 window#waybar {
-    font-family: "Font Awesome", "Open Sans";
-    font-size: 14px;
-    background-color: #101818;
+    background-color: #081030;
     border-bottom: none;
-    color: #a8b0a8;
+    color: #c0b0b8;
+}
+
+#clock {
+    padding-left: 4px;
+    padding-right: 4px;
+}
+
+#network {
+    padding-left: 4px;
+    padding-right: 4px;
+}
+
+#cpu {
+    padding-left: 4px;
+    padding-right: 4px;
+}
+
+#memory {
+    padding-left: 4px;
+    padding-right: 4px;
 }
