wayland stuff mostly

--- a/configs/laptop/eww/colors.scss
+++ b/configs/laptop/eww/colors.scss
@@ -1,5 +1,5 @@
-$bg: #081030;
-$fg: #c0b0b8;
-$nrm: #606888;
-$act: #d04038;
+$bg:  #181818;
+$fg:  #d0d0b0;
+$nrm: #404838;
+$act: #e8d8b8;
 $urg: #ff0000;
