update pc configs and easyeffects

--- a/configs/pc/eww/colors.scss
+++ b/configs/pc/eww/colors.scss
@@ -1,5 +1,5 @@
-$bg: #081030;
-$fg: #c0b0b8;
-$nrm: #606888;
-$act: #d04038;
+$bg: #101840;
+$fg: #d890a8;
+$nrm: #784858;
+$act: #e0e0e8;
 $urg: #ff0000;
