--- a/configs/pc/waybar/style.css
+++ b/configs/pc/waybar/style.css
@@ -5,9 +5,9 @@
 }
 
 window#waybar {
-    background-color: #081030;
+    background-color: #101840;
     border-bottom: none;
-    color: #c0b0b8;
+    color: #e0e0e8;
 }
 
 #clock {
