--- a/configs/laptop/eww/powermenu/powermenu.scss
+++ b/configs/laptop/eww/powermenu/powermenu.scss
@@ -1,22 +1,42 @@
 .powermenu {
-  background-color: $bg;
-  padding: 25px;
-  font-family: Font Awesome;
-  font-size: 50px;
-  border-radius: 4px;
-  button {
-    border-radius: 4px;
-    transition: all ease .2s;
-    &:hover { background-color: $nrm; }
-    .content {
-      border-radius: 4px;
+    background-color: rgba(0, 0, 0, 0.0);
+    padding: 30px;
+    font-family: Font Awesome;
+    font-size: 60px;
+    button {
+        border-radius: 15px;
+        transition: all ease .2s;
+        .content {
+            border-radius: 4px;
+        }
     }
-  }
-  .shutdown { color: $fg; }
-  .reboot { color: $fg; }
-  .logout { color: $fg; }
+    .shutdown {
+        color: $nrm;
+        &:hover {
+            border-color: $act;
+            background-color: $act;
+        }
+    }
+    .reboot {
+        color: $nrm;
+        &:hover {
+            background-color: $act;
+        }
+    }
+    .lock {
+        color: $nrm;
+        &:hover {
+            background-color: $act;
+        }
+    }
+    .logout {
+        color: $nrm;
+        &:hover {
+            background-color: $act;
+        }
+    }
 }
 
 .powermenu-clickhandler {
-  background-color: rgba(5, 5, 5, 0.9);
+    background-color: rgba(5, 5, 5, 0.9);
 }
