add eww to themer script

--- a/configs/pc/eww/colors.scss
+++ b/configs/pc/eww/colors.scss
@@ -1,5 +1,5 @@
-$fg: #d890a8;
-$bg: #101840;
-$nrm: #784858;
-$act: #e0e0e8;
+$fg: #a2bbc2;
+$bg: #0f0d10;
+$nrm: #485974;
+$act: #718287;
 $urg: #ff0000;
