laptop and script updates

--- a/configs/laptop/eww/colors.scss
+++ b/configs/laptop/eww/colors.scss
@@ -1,5 +1,5 @@
-$fg:  #d0d0b0;
-$bg:  #181818;
-$nrm: #404838;
-$act: #e8d8b8;
+$fg: #e5e8e9;
+$bg: #1e0f16;
+$nrm: #9f4e5d;
+$act: #a0a2a3;
 $urg: #ff0000;
