script consistency and root handling + config updates

--- a/configs/pc/waybar/style.css
+++ b/configs/pc/waybar/style.css
@@ -1,5 +1,5 @@
-@define-color fg #a2bbc2;
-@define-color bg #0f0d10;
+@define-color fg #A2BBC2;
+@define-color bg #0F0D10;
 @define-color nrm #485974;
 @define-color act #718287;
 @define-color urg #ff0000;
