update laptop configs and wall script

--- a/configs/laptop/eww/colors.scss
+++ b/configs/laptop/eww/colors.scss
@@ -1,5 +1,5 @@
-$fg: #e5e8e9;
-$bg: #1e0f16;
-$nrm: #9f4e5d;
-$act: #a0a2a3;
+$fg: #ebdfdf;
+$bg: #000000;
+$nrm: #939393;
+$act: #a49c9c;
 $urg: #ff0000;
