update laptop configs

--- a/configs/laptop/eww/colors.scss
+++ b/configs/laptop/eww/colors.scss
@@ -1,5 +1,5 @@
-$fg: #ebdfdf;
-$bg: #000000;
-$nrm: #939393;
-$act: #a49c9c;
+$fg: #7DC9DF;
+$bg: #000C1D;
+$nrm: #016599;
+$act: #578C9C;
 $urg: #ff0000;
