--- a/configs/laptop/waybar/style.css
+++ b/configs/laptop/waybar/style.css
@@ -1,7 +1,7 @@
-@define-color fg #ebdfdf;
-@define-color bg #000000;
-@define-color nrm #939393;
-@define-color act #a49c9c;
+@define-color fg #7DC9DF;
+@define-color bg #000C1D;
+@define-color nrm #016599;
+@define-color act #578C9C;
 @define-color urg #ff0000;
 
 * {
