update themer and rofi

--- a/configs/pc/eww/colors.scss
+++ b/configs/pc/eww/colors.scss
@@ -1,5 +1,5 @@
-$fg: #A2BBC2;
-$bg: #0F0D10;
-$nrm: #485974;
-$act: #718287;
+$fg: #D3CCC5;
+$bg: #0A100F;
+$nrm: #694738;
+$act: #938E89;
 $urg: #ff0000;
