--- a/configs/pc/eww/powermenu/powermenu.scss
+++ b/configs/pc/eww/powermenu/powermenu.scss
@@ -2,37 +2,13 @@
     background-color: rgba($bg, 0.0);
     padding: 30px;
     font-family: Font Awesome;
-    font-size: 60px;
+    font-size: 70px;
     button {
         border-radius: 15px;
         transition: all ease .2s;
-        .content {
-            border-radius: 4px;
-        }
-    }
-    .shutdown {
         color: $nrm;
         &:hover {
-            border-color: $act;
-            background-color: $act;
-        }
-    }
-    .reboot {
-        color: $nrm;
-        &:hover {
-            background-color: $act;
-        }
-    }
-    .lock {
-        color: $nrm;
-        &:hover {
-            background-color: $act;
-        }
-    }
-    .logout {
-        color: $nrm;
-        &:hover {
-            background-color: $act;
+            color: $act;
         }
     }
 }
