--- a/configs/laptop/eww/colors.scss
+++ b/configs/laptop/eww/colors.scss
@@ -1,5 +1,5 @@
-$fg: #7DC9DF;
-$bg: #000C1D;
-$nrm: #016599;
-$act: #578C9C;
+$fg: #99ECDD;
+$bg: #060A0E;
+$nrm: #41D8BE;
+$act: #6BA59A;
 $urg: #ff0000;
