--- a/configs/laptop/eww/powermenu/powermenu.scss
+++ b/configs/laptop/eww/powermenu/powermenu.scss
@@ -1,45 +1,18 @@
 .powermenu {
-    background-color: rgba(0,0,0,0.0);
-    opacity: 1.0;
+    background-color: rgba($bg, 0.0);
     padding: 30px;
     font-family: Font Awesome;
-    font-size: 60px;
+    font-size: 70px;
     button {
-        opacity: 1.0;
         border-radius: 15px;
         transition: all ease .2s;
-        .content {
-            border-radius: 4px;
-        }
-    }
-    .shutdown {
         color: $nrm;
         &:hover {
-            border-color: $act;
-            background-color: $act;
-        }
-    }
-    .reboot {
-        color: $nrm;
-        &:hover {
-            background-color: $act;
-        }
-    }
-    .lock {
-        color: $nrm;
-        &:hover {
-            background-color: $act;
-        }
-    }
-    .logout {
-        color: $nrm;
-        &:hover {
-            background-color: $act;
+            color: $act;
         }
     }
 }
 
 .powermenu-clickhandler {
-    background-color: $bg;
-    opacity: 0.95;
+    background-color: rgba($bg, 0.95);
 }
