--- a/configs/laptop/waybar/style.css
+++ b/configs/laptop/waybar/style.css
@@ -1,7 +1,7 @@
-@define-color fg #7DC9DF;
-@define-color bg #000C1D;
-@define-color nrm #016599;
-@define-color act #578C9C;
+@define-color fg #99ECDD;
+@define-color bg #060A0E;
+@define-color nrm #41D8BE;
+@define-color act #6BA59A;
 @define-color urg #ff0000;
 
 * {
@@ -15,42 +15,42 @@
 
 window#waybar {
     background-color: @bg;
-    color: @fg;
     border: none;
     border-radius: 0px;
-    font-size: 13px;
-    font-family: "Open Sans SemiBold";
+    font-size: 14px;
+    color: @fg;
 }
 
 #clock {
-    padding: 1px 4px;
+    font-family: Open Sans SemiBold;
+    padding: 2px 10px;
 }
 
 #network {
-    padding: 1px 4px;
+    padding: 2px 10px;
+    font-family: Open Sans SemiBold;
 }
 
 #cpu {
-    padding: 1px 4px;
+    padding: 2px 8px;
+    font-family: Open Sans SemiBold;
+    color: @fg;
 }
 
 #memory {
-    padding: 1px 4px;
-}
-
-#battery {
-    padding: 1px 8px;
+    padding: 2px 0px;
+    font-family: Open Sans SemiBold;
 }
 
 #workspaces {
-    font-family: Font Awesome;
-    padding: 1px 8px;
+	font-family: Font Awesome;
+    padding: 2px 4px;
 }
 
 #workspaces button {
     color: @fg;
-    padding: 1px 4px;
     border: none;
+    padding: 2px 8px;
 }
 
 #workspaces button:hover {
