add eww bar and adapt hyprland

--- a/configs/dotconfig/eww/dashboard/dashboard.scss
+++ b/configs/dotconfig/eww/dashboard/dashboard.scss
@@ -1,136 +1,11 @@
+@import "./widgets/clock.scss";
+@import "./widgets/music.scss";
+@import "./widgets/system.scss";
+@import "./widgets/volume.scss";
+@import "./widgets/calendar.scss";
+
 .dashboard {
-    background-color: $bg;
-    padding: 10px;
-    border-radius: 0px 0px 8px 0px;
-}
-
-.calendar-wrapper {
-    background-color: rgba($fg, 0.1);
-    border-radius: 8px;
+    background-color: rgba($bg, 0.6);
     padding: 14px;
-}
-
-.calendar {
-    font-family: Source Code Pro;
-    font-size: 18px;
-    calendar:selected {
-        color: $nrm;
-    }
-    calendar.header {
-        color: $fg;
-		font-weight: bold;
-    }
-    calendar.button {
-        color: $fg;
-        &:hover {
-            color: $act;
-        }
-    }
-    calendar.highlight {
-        color: $fg;
-        font-weight: bold;
-    }
-    calendar:indeterminate {
-        color: $bg;
-    }
-}
-
-.music {
-    background-color: rgba($fg, 0.1);
-    border-radius: 8px;
-    padding: 14px;
-    .song {
-        color: $fg;
-        font-size : 18px;
-        font-weight : bold;
-    }
-    .artist {
-        color: $fg;
-        font-size : 14px;
-        font-weight : normal;
-    }
-    .music-player {
-        font-family: Font Awesome;
-        button {
-            color: $fg;
-            font-size : 24px;
-            &:hover {
-                color: $act;
-            }
-        }
-    }
-}
-
-.volume {
-    background-color: rgba($fg, 0.1);
-    border-radius: 8px;
-    padding: 14px;
-    .sliderbar {
-        border-radius: 8px;
-        margin-right: 5px;
-        trough {
-            all: unset;
-            border-radius: 8px;
-            background-color: $bg;
-            min-height: 12px;
-            min-width: 240px;
-        }
-        highlight {
-            all: unset;
-            border-radius: 8px;
-            background-color: $act;
-        }
-    }
-    .slidervalue {
-        color: $fg;
-        font-size : 14px;
-        font-weight : bold;
-        min-width: 40px;
-    }
-    .volicon {
-        color: $fg;
-        font-size : 34px;
-        min-width: 40px;
-    }
-    .micicon {
-        color: $fg;
-        font-size : 28px;
-        min-width: 40px;
-    }
-}
-
-.clock {
-    background-color: rgba($fg, 0.1);
-    border-radius: 8px;
-    padding: 14px;
-    .clock-time {
-        color: $fg;
-        font-size : 24px;
-        font-weight: bold;
-    }
-    .clock-date {
-        color: $fg;
-        font-size : 14px;
-    }
-}
-
-.bluetooth {
-    background-color: rgba($fg, 0.1);
-    border-radius: 8px;
-    padding: 14px;
-    font-size : 32px;
-    font-family: Font Awesome;
-    color: $fg;
-    &:hover {
-        background-color: $act;
-    }
-}
-
-.network {
-    background-color: rgba($fg, 0.1);
-    border-radius: 8px;
-    padding: 14px;
-    font-size : 42px;
-    font-family: Font Awesome;
-    color: $fg;
+    border-radius: 0px 0px 16px 0px;
 }
