add battery to eww bar

--- a/configs/dotconfig/eww/bar/bar.scss
+++ b/configs/dotconfig/eww/bar/bar.scss
@@ -1,5 +1,6 @@
 @import "./widgets/datetime.scss";
 @import "./widgets/icon.scss";
+@import "./widgets/battery.scss";
 
 .bar_class {
     background-color: rgba($bg, 0.9);
