add charging indicator to battery module and tweak ncspot

--- a/configs/dotconfig/eww/bar/widgets/battery.scss
+++ b/configs/dotconfig/eww/bar/widgets/battery.scss
@@ -2,8 +2,13 @@
     border-radius: 0px;
     font-family: "Open Sans";
     font-weight: bold;
+
     .battery-text {
         color: $fg;
         margin: 0 2px;
+    }
+    .battery-icon {
+        color: $fg;
+        margin: 0 10px;
     }
 }
