fix eww structure

--- a/configs/dotconfig/eww/dashboard/dashboard.scss
+++ b/configs/dotconfig/eww/dashboard/dashboard.scss
@@ -4,8 +4,8 @@
 @import "./widgets/volume.scss";
 @import "./widgets/calendar.scss";
 
-.dashboard {
-    background-color: rgba($bg, 0.6);
+.dash_class {
+    background-color: rgba($bg, 0.9);
     padding: 14px;
     border-radius: 0px 0px 16px 0px;
 }
