add wifi bar widget

--- a/configs/dotconfig/eww/bar/bar.scss
+++ b/configs/dotconfig/eww/bar/bar.scss
@@ -1,6 +1,7 @@
 @import "./widgets/datetime.scss";
 @import "./widgets/icon.scss";
 @import "./widgets/battery.scss";
+@import "./widgets/wifi.scss";
 
 .bar_class {
     background-color: rgba($bg, 0.9);
