eww now supports systray

--- a/configs/dotconfig/eww/bar/bar.scss
+++ b/configs/dotconfig/eww/bar/bar.scss
@@ -2,6 +2,7 @@
 @import "./widgets/battery.scss";
 @import "./widgets/wifi.scss";
 @import "./widgets/workspaces.scss";
+@import "./widgets/systray.scss";
 
 .bar_class {
     background-color: rgba($bg, 0.85);
