proper styling for systray

--- a/configs/dotconfig/eww/bar/widgets/systray.scss
+++ b/configs/dotconfig/eww/bar/widgets/systray.scss
@@ -3,4 +3,9 @@
     font-family: "Open Sans";
     font-weight: bold;
     margin: 0 2px;
+    color: $fg;
+    :nth-child(2) {
+        background-color: rgba($bg, 0.6);
+        padding: 2px;
+    }
 }
