fix some eww widgets and change font

--- a/configs/dotconfig/eww/bar/widgets/wifi.scss
+++ b/configs/dotconfig/eww/bar/widgets/wifi.scss
@@ -2,12 +2,13 @@
     border-radius: 0px;
     font-family: "Open Sans";
     font-weight: bold;
+    margin: 0 4px;
+
     .wifi-text {
         color: $fg;
-        margin: 0 2px;
     }
     .wifi-icon {
         color: $fg;
-        margin: 0 10px;
+        margin-right: 4px;
     }
 }
