--- a/configs/dotconfig/eww/bar/widgets/battery.scss
+++ b/configs/dotconfig/eww/bar/widgets/battery.scss
@@ -2,13 +2,13 @@
     border-radius: 0px;
     font-family: "Open Sans";
     font-weight: bold;
+    margin: 0 4px;
 
     .battery-text {
         color: $fg;
-        margin: 0 2px;
     }
     .battery-icon {
         color: $fg;
-        margin: 0 10px;
+        margin-right: 2px;
     }
 }
