--- a/configs/dotconfig/eww/powermenu/powermenu.scss
+++ b/configs/dotconfig/eww/powermenu/powermenu.scss
@@ -2,10 +2,13 @@
 
 .powermenu {
     background-color: rgba($bg, 0.0);
-    padding: 30px;
-    font-family: Font Awesome;
-    font-size: 70px;
+    margin: 0px;
+    padding: 0px;
+    font-family: "FontAwesome";
+    font-size: 80px;
     button {
+        margin: 0px;
+        padding: 0px;
         border-radius: 15px;
         transition: all ease .2s;
         color: $nrm;
