--- a/configs/dotconfig/eww/bar/widgets/openrazer.scss
+++ b/configs/dotconfig/eww/bar/widgets/openrazer.scss
@@ -1,14 +1,14 @@
-.battery-widget {
+.openrazer-mouse-widget {
     border-radius: 0px;
     font-family: "Open Sans";
     font-weight: bold;
     margin: 0 4px;
 
-    .battery-text {
+    .openrazer-mouse-text {
         color: $fg;
         margin-left: 2px;
     }
-    .battery-icon {
+    .openrazer-mouse-icon {
         color: $fg;
         margin-right: 2px;
     }
