--- a/configs/dotconfig/eww/bar/widgets/wifi.scss
+++ b/configs/dotconfig/eww/bar/widgets/wifi.scss
@@ -6,9 +6,10 @@
 
     .wifi-text {
         color: $fg;
+        margin-left: 2px;
     }
     .wifi-icon {
         color: $fg;
-        margin-right: 4px;
+        margin-right: 2px;
     }
 }
