modify system scripts and eww config

--- a/configs/dotconfig/eww/bar/bar.scss
+++ b/configs/dotconfig/eww/bar/bar.scss
@@ -4,6 +4,7 @@
 @import "./widgets/hyprland.scss";
 @import "./widgets/systray.scss";
 @import "./widgets/openrazer.scss";
+@import "./widgets/ether.scss";
 
 .bar_class {
     background-color: rgba($bg, 0.85);
