--- a/configs/dotconfig/eww/bar/widgets/datetime.scss
+++ b/configs/dotconfig/eww/bar/widgets/datetime.scss
@@ -2,7 +2,7 @@
     border-radius: 0px;
     font-family: "Open Sans";
     font-weight: bold;
-    margin: 0 4px;
+    padding: 0 4px;
 
     .clock-time {
         color: $fg;
