--- a/configs/dotconfig/eww/bar/widgets/systray.scss
+++ b/configs/dotconfig/eww/bar/widgets/systray.scss
@@ -3,7 +3,7 @@
     font-family: "Open Sans";
     font-weight: bold;
     color: $fg;
-    margin: 0 4px;
+    padding: 0 4px;
 
     :nth-child(2) {
         background-color: rgba($bg, 0.6);
