--- a/configs/dotconfig/eww/bar/widgets/battery.scss
+++ b/configs/dotconfig/eww/bar/widgets/battery.scss
@@ -2,14 +2,18 @@
     border-radius: 0px;
     font-family: "Open Sans";
     font-weight: bold;
-    margin: 0 4px;
+    padding: 0 4px;
 
     .battery-text {
         color: $fg;
         margin-left: 2px;
     }
-    .battery-icon {
+    .battery-icon-normal {
         color: $fg;
+        margin-right: 2px;
+    }
+    .battery-icon-charging {
+        color: $act;
         margin-right: 2px;
     }
 }
