fix bar battery module styling

--- a/configs/dotconfig/eww/eww.scss.d/static/widgets/battery.scss
+++ b/configs/dotconfig/eww/eww.scss.d/static/widgets/battery.scss
@@ -15,12 +15,8 @@
         color: $fg;
         margin-left: 2px;
     }
-    .battery-icon-normal {
+    .battery-icon {
         color: $fg;
-        margin-right: 2px;
-    }
-    .battery-icon-charging {
-        color: $act;
         margin-right: 2px;
     }
 }
